crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__parser__tests__committed_sll_containment_conflict_preserves_token_deletion_recovery.snap
---
source: crates/antlr-rust-runtime/src/parser.rs
expression: "diagnostics.lock().expect(\"recorded diagnostics lock\").as_slice()"
---
[
    RecordedDiagnostic {
        grammar_file_name: "Mini.g4",
        offending_text: Some(
            "x",
        ),
        line: 1,
        column: 0,
        span: None,
        message: "extraneous input 'x' expecting 3",
        error: None,
    },
]
