crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__parser__tests__folds_left_recursive_boundary_into_rule_node.snap
---
source: crates/antlr-rust-runtime/src/parser.rs
expression: "(rule_index, invoking_state, alt_number, start_index, stop_index)"
---
(
    1,
    -1,
    3,
    0,
    Some(
        0,
    ),
)
