crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__parser__tests__full_context_exact_conflict_reports_attempt_and_ambiguity.snap
---
source: crates/antlr-rust-runtime/src/parser.rs
expression: parser.generated_parser_diagnostics
---
[
    ParserDiagnostic {
        line: 1,
        column: 0,
        message: "reportAttemptingFullContext d=0 (s), input='x'",
        offending: Some(
            TokenId(
                0,
            ),
        ),
    },
    ParserDiagnostic {
        line: 1,
        column: 0,
        message: "reportAmbiguity d=0 (s): ambigAlts={1, 2}, input='xy'",
        offending: Some(
            TokenId(
                1,
            ),
        ),
    },
]
