crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__parser__tests__generated_prediction_diagnostics_use_adaptive_context.snap
---
source: crates/antlr-rust-runtime/src/parser.rs
expression: parser.generated_parser_diagnostics
---
[
    ParserDiagnostic {
        line: 1,
        column: 2,
        message: "reportAttemptingFullContext d=0 (s), input='xy'",
        offending: Some(
            TokenId(
                1,
            ),
        ),
    },
    ParserDiagnostic {
        line: 1,
        column: 0,
        message: "reportContextSensitivity d=0 (s), input='x'",
        offending: Some(
            TokenId(
                0,
            ),
        ),
    },
    ParserDiagnostic {
        line: 1,
        column: 2,
        message: "reportAttemptingFullContext d=0 (s), input='xy'",
        offending: Some(
            TokenId(
                1,
            ),
        ),
    },
]
