crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__parser__tests__local_exact_conflict_reports_ambiguity_without_full_context_attempt.snap
---
source: crates/antlr-rust-runtime/src/parser.rs
expression: parser.generated_parser_diagnostics
---
[
    ParserDiagnostic {
        line: 1,
        column: 0,
        message: "reportAmbiguity d=0 (s): ambigAlts={1, 2}, input='x'",
        offending: Some(
            TokenId(
                0,
            ),
        ),
    },
]
